--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
-*{margin:0;padding:0;box-sizing: border-box}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%; }
+  main .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    padding: 40px;
+    margin: 0 auto;
+    width: 430px;
+    background: #202A2C;
+    color: #eee; }
+    main .container .tabs {
+      display: flex;
+      justify-content: center;
+      align-content: center; }
+      main .container .tabs div {
+        position: relative;
+        width: 50%;
+        text-align: center;
+        padding: 20px;
+        font-size: 20px;
+        line-height: 20px;
+        border-bottom: 2px solid #777; }
+        main .container .tabs div::after {
+          position: absolute;
+          content: '';
+          display: block;
+          width: 0;
+          height: 2px;
+          bottom: -1px;
+          background: #ddd;
+          transition: width .3s;
+          margin-top: 21px; }
+        main .container .tabs div.active::after {
+          width: 100%; }
+      main .container .tabs .sign-in::after {
+        right: 0; }
+      main .container .tabs .sign-up::after {
+        left: 0; }
+    main .container .form label {
+      display: block; }
+
+.code-info {
+  font-family: YaHei Consolas Hybrid, Consolas, Tahoma, sans-serif, monospace;
+  font-size: 12px;
+  color: #999;
+  text-align: right;
+  right: 5px;
+  bottom: 10px;
+  margin-top: 60px; }
+  .code-info p {
+    margin: 0; }
+  .code-info a {
+    color: #999;
+    text-decoration: none; }
+    .code-info a:visited {
+      color: #999; }
+    .code-info a:hover {
+      color: #777; }
+  .code-info .netguru {
+    color: #00d664; }
+    .code-info .netguru:hover {
+      color: #00A34C; }
+    .code-info .netguru:visited {
+      color: #00A34C; }
