--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ main {
         margin: 0 auto;
         width: 430px;
         background: #202A2C;
-        color: #eee;
+        color: rgba(255, 255, 255, 1);
         .tabs {
             cursor: pointer;
             display: flex;
@@ -36,13 +36,13 @@ main {
                 bottom: -2px;
                 left: 0;
                 height: 2px;
-                background: #eee;
+                background: rgba(255, 255, 255, 1);
                 z-index: 1;
                 transition: 0.8s ;
             }
             &.left {
                 .sign-up{
-                    color:#777;
+                    color:rgba(255, 255, 255, 0.6);
                 }
                 &::after {
                     transform: translateX(0);
@@ -50,7 +50,7 @@ main {
             }
             &.right {
                 .sign-in{
-                    color:#777;
+                    color:rgba(255, 255, 255, .6);
                 }
                 &::after {
                     transform: translateX(100%);
@@ -63,6 +63,7 @@ main {
                 padding: 20px;
                 font-size: 20px;
                 line-height: 20px;
+                transition: color .4s ease;
                 /*&::after {
                     position: absolute;
                     content: '';
