--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,9 @@ main {
                         border-left: #61C7B1 2px solid;
                         transition: .5s;
                     }
+                    &.error,&.error:focus{
+                        border-left: #FE4452 2px solid;
+                    }
                     &#sign-in-password:focus,
                     &#sign-up-password {
                         border-left: #23A7F1 2px solid;
@@ -112,6 +115,7 @@ main {
                     font-family: monospace;
                     margin: 10px 0;
                 }
+                
                 .form-submit {
                     margin: 50px 0;
                     button {
