--- a/style.scss
+++ b/style.scss
@@ -22,9 +22,16 @@ main {
         flex-direction: column;
         padding: 40px;
         margin: 0 auto;
-        width: 430px;
+        max-width: 430px;
         background: #202A2C;
         color: rgba(255, 255, 255, 1);
+        @media (max-width:376px){
+            padding:40px 20px;
+        }
+        .header{
+            height: 60px;
+            
+        }
         .tabs {
             /* tabs */
             cursor: pointer;
@@ -70,7 +77,7 @@ main {
                 padding: 20px;
                 font-size: 20px;
                 line-height: 20px;
-                transition: color .2s ease;
+                transition: color .3s ease;
             }
         }
         .forms {
@@ -97,27 +104,35 @@ main {
                     color: rgba(255, 255, 255, 1);
                     border-left: 2px solid #323B40;
                     font-size: 20px;
-                    &:focus,&.active {
+                    &:focus,
+                    &.active {
                         outline: none;
                         border-left: #61C7B1 2px solid;
                         transition: .5s;
                     }
-                    &.error,&.error:focus{
+                    &.error,
+                    &.error:focus {
                         border-left: #FE4452 2px solid;
                     }
-                    &#sign-in-password:focus,
+                    /*                  &#sign-in-password:focus,
                     &#sign-up-password {
                         border-left: #23A7F1 2px solid;
-                    }
+                    }   */
                 }
                 p {
                     text-transform: uppercase;
                     font-family: monospace;
                     margin: 10px 0;
+                    transition: 0.3s ease-in-out;
+                    &.active{
+                        color:#fff;
+                    }
                 }
-                
                 .form-submit {
                     margin: 50px 0;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
                     button {
                         cursor: pointer;
                         padding: 18px 30px;
@@ -128,7 +143,7 @@ main {
                         background: #23A7F1;
                         border: none;
                         transition: .3s ease-in-out;
-                        @media (max-width:375px){
+                        @media (max-width: 375px) {
                             padding:18px 6px;
                         }
                         &:hover {
@@ -136,14 +151,17 @@ main {
                         }
                         &:disabled {
                             background: #A8B1B6;
-                            cursor: not-allowed;
-
+                            cursor: no-drop;
                         }
                     }
                     a {
-                        float: right;
-                        padding-top: 5%;
                         color: #A8B1B6;
+                    }
+                    p{ 
+                        width:50%;
+                        a{
+
+                        }
                     }
                 }
             }
