--- a/style.css
+++ b/style.css
@@ -4,7 +4,26 @@
   box-sizing: border-box; }
 
 body {
-  background: #A8B1B6; }
+  background: center url(http://ond8gcwbr.bkt.clouddn.com/17-5-30/62363312.jpg) no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+  position: relative; }
+  @media (max-width: 430px) {
+    body {
+      justify-content: flex-start; } }
+
+.dimmer {
+  overflow: visible;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: -1;
+  position: absolute; }
 
 main {
   display: flex;
@@ -17,16 +36,25 @@ main {
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    padding: 40px;
+    padding: 20px 40px;
     margin: 0 auto;
     max-width: 430px;
     background: #202A2C;
-    color: white; }
+    color: white;
+    box-shadow: 0px 5px 30px 3px black; }
     @media (max-width: 376px) {
       main .container {
-        padding: 40px 20px; } }
+        padding: 20px 20px; } }
     main .container .header {
-      height: 60px; }
+      text-align: center;
+      text-transform: uppercase;
+      overflow: hidden; }
+      main .container .header h1 {
+        padding-top: 60px;
+        padding-bottom: 30px;
+        letter-spacing: 8px;
+        font-family: monospace;
+        font-size: 30px; }
     main .container .tabs {
       /* tabs */
       cursor: pointer;
@@ -42,9 +70,9 @@ main {
         content: '';
         display: block;
         width: 50%;
-        bottom: -2px;
+        bottom: -1.8px;
         left: 0;
-        height: 2px;
+        height: 1.8px;
         background: white;
         z-index: 1;
         transition: 0.8s; }
