--- a/style.scss
+++ b/style.scss
@@ -6,31 +6,60 @@ $grey: rgba(255, 255, 255, .4);
 }
 
 body {
-    background: #A8B1B6;
+    background: center url(http://ond8gcwbr.bkt.clouddn.com/17-5-30/62363312.jpg) no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    position: relative;
+    @media (max-width: 430px) {
+        justify-content: flex-start;
+    }
+}
+
+.dimmer {
+    overflow: visible;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .45);
+    z-index: -1;
+    position: absolute;
 }
 
 main {
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 100%; // margin-top: 60px;
+    width: 100%;
     .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
         flex-direction: column;
-        padding: 40px;
+        padding: 20px 40px;
         margin: 0 auto;
         max-width: 430px;
         background: #202A2C;
         color: rgba(255, 255, 255, 1);
-        @media (max-width:376px){
-            padding:40px 20px;
+        box-shadow: 0px 5px 30px 3px black;
+        @media (max-width: 376px) {
+            padding:20px 20px;
         }
-        .header{
-            height: 60px;
-            
+        .header {
+            text-align: center;
+            text-transform: uppercase;
+            overflow: hidden;
+            h1 {
+                padding-top: 60px;
+                padding-bottom: 30px;
+                letter-spacing: 8px;
+                font-family: monospace;
+                font-size: 30px;
+            }
         }
         .tabs {
             /* tabs */
@@ -47,9 +76,9 @@ main {
                 content: '';
                 display: block;
                 width: 50%;
-                bottom: -2px;
+                bottom: -1.8px;
                 left: 0;
-                height: 2px;
+                height: 1.8px;
                 background: rgba(255, 255, 255, 1);
                 z-index: 1;
                 transition: 0.8s;
@@ -124,8 +153,8 @@ main {
                     font-family: monospace;
                     margin: 10px 0;
                     transition: 0.3s ease-in-out;
-                    &.active{
-                        color:#fff;
+                    &.active {
+                        color: #fff;
                     }
                 }
                 .form-submit {
@@ -157,11 +186,9 @@ main {
                     a {
                         color: #A8B1B6;
                     }
-                    p{ 
-                        width:50%;
-                        a{
-
-                        }
+                    p {
+                        width: 50%;
+                        a {}
                     }
                 }
             }
