--- a/style.scss
+++ b/style.scss
@@ -21,12 +21,66 @@ body {
 
 .dimmer {
     overflow: visible;
-    opacity: 1;
+    opacity: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .45);
-    z-index: -1;
+    z-index: 5;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    transition: .6s ease-in-out;
+    
+    &.active {
+        visibility: visible;
+        opacity: 1;
+    }
+    .login-info {
+        max-height: 400px;
+        min-width: 300px;
+        max-width: 320px;
+        background: #fff;
+        padding: 40px 20px;
+        font-size: 30px;
+        margin-top: -140px;
+        border-top: 10px #61C7B1 solid;
+        border-radius: 4px;
+        color: black;
+        box-shadow: 0 4px 30px 6px #333;
+        .introduction {}
+        p {
+            margin: 20px 0;
+            span {
+                color: #FE4452;
+                font-size: 16px;
+            }
+        }
+        .login-info-username,
+        .login-info-email {
+            font-size: 20px;
+        }
+        div {
+            margin: 60px auto;
+            text-align: center;
+            button {
+                cursor: pointer;
+                padding: 10px 30px;
+                font-size: 18px;
+                font-weight: 700;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+                color: #fff;
+                background: #23A7F1;
+                border: none;
+                border-radius: 6px;
+                transition: .3s ease-in-out;
+                &:hover{
+                    background:#0E8ED5;
+                }
+            }
+        }
+    }
 }
 
 main {
@@ -34,6 +88,10 @@ main {
     justify-content: center;
     align-content: center;
     width: 100%;
+    transition: .6s ease;    
+    &.dimmer{
+        filter: blur(3px);
+    }
     .container {
         display: flex;
         flex-wrap: wrap;
@@ -123,9 +181,9 @@ main {
                     margin: 20px 0;
                     letter-spacing: 2px;
                     p {
-                        padding-left: 5%;
-                        font-size: 14px;
                         span {
+                            padding-left: 5%;
+                            font-size: 14px;
                             transition: .5s ease;
                             color: #FE4452;
                             opacity: 0;
