完成登录&信息板展示功能

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ main {
   align-content: center;
   width: 100%;
   transition: .6s ease; }
-  main.dimmer {
+  main.blur {
     filter: blur(3px); }
   main .container {
     display: flex;
